infra/k8s/legacy-client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: legacy-client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: legacy-client
  template:
    metadata:
      labels:
        app: legacy-client
    spec:
      containers:
        - name: legacy-client
          image: docker12fozxe/microfront-nginx

---
apiVersion: v1
kind: Service
metadata:
  name: legacy-client-srv
spec:
  selector:
    app: legacy-client
  ports:
    - name: legacy-client
      protocol: TCP
      port: 8080
      targetPort: 8080
