infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: legacy-client-srv
                port:
                  number: 8080
          - path: /react(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: react-client-srv
                port:
                  number: 3000
          - path: /next(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: react-client-2-srv
                port:
                  number: 3000
